[package]
name = "stream-unconsume"
version = "0.1.0"
authors = ["Alexey Gerasimov <lokomot476@gmail.com>"]
description = "Partially consume stream and get it back unchanged"
keywords = ["stream", "unconsume", "patial consume"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fan-tom/stream-unconsume"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
